# search-rs

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: arg_parser.rs  main.rs
