[package]
name = "search-rs"
version = "1.1.3"
edition = "2021"
authors = ["MasterMach50"]
repository = "https://github.com/MasterMach50/search-rs"

[[bin]]
name = "search"
path = "src/main.rs"

[dependencies]
glob = "0.3.0"
colored = "2.0.0"
regex = "1.7.0"
clap = {version = "4.1.10", features = [ "derive" ] }
